--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,57 @@
-Flask
-Flask-SQLAlchemy
-Flask-WTF
-Flask-Login
-WTForms
+alembic==1.15.2
+antiorm==1.2.1
+app==0.0.1
+arrow==1.3.0
+auth==0.5.3
+bcrypt==4.3.0
+binaryornot==0.4.4
+blinker==1.9.0
+blueprint==3.4.2
+certifi==2025.4.26
+chardet==5.2.0
+charset-normalizer==2.1.1
+click==8.1.3
+config==0.5.1
+cookiecutter==2.1.1
+create-app==0.6.2
+db==0.1.1
+dnspython==2.7.0
+dotenv==0.9.9
+email_validator==2.2.0
+eventlet==0.39.1
+falcon==4.0.2
+Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+form==0.0.1
+greenlet==3.2.2
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jinja2-time==0.2.0
+Mako==1.3.10
+MarkupSafe==3.0.2
+mongoengine==0.29.1
+packaging==25.0
+pymongo==4.12.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-slugify==8.0.4
+PyYAML==6.0.2
+repoze.lru==0.7
+requests==2.28.1
+Routes==2.5.1
+signup==0.0.1
+six==1.17.0
+SQLAlchemy==2.0.40
+text-unidecode==1.3
+types-python-dateutil==2.9.0.20241206
+typing_extensions==4.13.2
+urllib3==1.26.20
+Werkzeug==3.1.3
+WTForms==3.2.1
+WTForms-SQLAlchemy==0.4.2
